<resources>
    <string name="app_name">InstaClone</string>
    <string name="home">Home</string>
    <string name="search">Search</string>
    <string name="add_more">Add More</string>
    <string name="likes">Likes</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mandeep_bhalothia">Mandeep Bhalothia</string>
    <string name="open_drawer">Open Nav Drawer</string>
    <string name="close_drawer">Close Nav Drawer</string>
    <string name="follow_and_invite_friends">Follow and Invite Friends</string>
    <string name="about">About</string>
    <string name="help">Help</string>
    <string name="account">Account</string>
    <string name="ads">Ads</string>
    <string name="security">Security</string>
    <string name="privacy">Privacy</string>
    <string name="notifications">Notifications</string>
    <string name="logins">Logins</string>
    <string name="add_accounts">Add Accounts</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_fragment">Log Out</string>
    <string name="edit_profile_fragment">Edit Profile</string>
    <string name="settings">Settings</string>
    <string name="change_profile_photo">Change Profile Photo</string>
    <string name="name">Name</string>
    <string name="user_nme">User Name</string>
    <string name="website">Website</string>
    <string name="bio">Bio</string>
    <string name="switch_to_professional_account">Switch to Professional Account</string>
    <string name="profile_information">Profile Information</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="gender">Gender</string>
    <string name="close_button_to_go_back">Close Button to go back</string>
    <string name="insta_logo_desc">Insta logo</string>
    <string name="login">Login</string>
    <string name="no_account_yet_create_one">No account yet ? Create One</string>
    <string name="password">Password</string>
    <string name="register_a_new_account">Register A New Account</string>
    <string name="full_name">Full Name</string>
    <string name="register">Register</string>
    <string name="auth_success">Authentication Succussfull</string>
    <string name="auth_failed">Authentication Failed</string>
    <string name="users">users</string>
    <string name="username">username</string>
    <string name="user_account_settings">user_account_settings</string>
    <string name="sending_email_verification_mail">Verification Mail sent to your email. Please verify.</string>
    <string name="check_verification_mail">Please check your inbox and verify email first</string>
    <string name="data_issue">Data From Server is Null</string>
    <string name="calling_activity">calling new activity</string>
    <string name="details_updated">Details Updated</string>
    <string name="please_confirm_your_password">Please confirm your Password</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="confirm_dialog">ConfirmDialog</string>
    <string name="gallery">Gallery</string>
    <string name="photo">Photo</string>
    <string name="photos">photos</string>
    <string name="next">NEXT</string>
    <string name="selectedImage">selectedImage</string>
    <string name="share">Share</string>
    <string name="caption">Write a caption</string>
    <string name="new_photo">new_photo_</string>
    <string name="return_to_fragment">return_to_fragment</string>
    <string name="profile_photo">profile_photo</string>
    <string name="selectedBitmap">selectedBitmap</string>
    <string name="user_photos">user_photos</string>
    <string name="activity_no">activity_no</string>
    <string name="view_post_fragment">view_post_fragment</string>
    <string name="dummy_post_">Liked by Mandeep, Yogesh and 30 others</string>
    <string name="dummy">new learning #android#insta</string>
    <string name="dummy_comment">View all 3 comments</string>
    <string name="dummy_date">3 days ago</string>
    <string name="comment">Comment</string>
    <string name="post">Post</string>
    <string name="add_a_comment">Add a comment</string>
    <string name="reply">Reply</string>
    <string name="_4_likes">4 likes</string>
    <string name="_3h">3h</string>
    <string name="comment_fragment">comment_fragment</string>
    <string name="field_comment">comments</string>
    <string name="search_user_name">Search user name</string>
    <string name="view_profile_fragment">view_profile_fragment</string>
    <string name="followings">followings</string>
    <string name="followers">followers</string>
    <string name="user_id">user_id</string>
</resources>
