<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/homeMenu"
        android:title="@string/home"
        android:icon="@drawable/ic_home"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/searchMenu"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/addMenu"
        android:title="@string/add_more"
        android:icon="@drawable/ic_add"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/likeMenu"
        android:title="@string/likes"
        android:icon="@drawable/ic_like"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/profileMenu"
        android:title="@string/profile"
        android:icon="@drawable/ic_person"
        app:showAsAction="ifRoom"/>

</menu>