<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingBottom="20dp"
    android:paddingStart="10dp"
    android:paddingEnd="10dp">

    <TextView
        android:id="@+id/confirmPassTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:text="@string/please_confirm_your_password"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/passwordDialogEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLines="2"
        android:paddingStart="8dp"
        android:paddingEnd="8dp"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/confirmPassTv" />

    <Button
        android:id="@+id/cancelDialogBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordDialogEt" />

    <Button
        android:id="@+id/confirmDialogBtn"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintWidth_percent="0.4"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/login_btn_bg"
        android:text="@string/confirm"
        android:textAllCaps="false"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordDialogEt" />

</androidx.constraintlayout.widget.ConstraintLayout>