<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:isScrollContainer="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".login.RegisterActivity"
        android:paddingBottom="@dimen/app_bar_height">

        <!--progress bar-->
        <ProgressBar
            android:id="@+id/progressBarRegister"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:elevation="8dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--register title-->
        <TextView
            android:id="@+id/logoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="70dp"
            android:text="@string/register_a_new_account"
            android:textAllCaps="true"
            android:textSize="24sp"
            android:gravity="center"
            android:textColor="@color/black"
            app:layout_constraintTop_toTopOf="parent" />

        <!--email-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailRegisterTl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/logoLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailRegisterEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--fullName-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/fullNameRegisterTl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/emailRegisterTl" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullNameRegisterEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/full_name"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--user name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/userNameRegisterTl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/fullNameRegisterTl">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/userNameRegisterEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_nme"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--password-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/passwordRegisterTl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            app:layout_constraintTop_toBottomOf="@+id/userNameRegisterTl"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/passwordRegisterEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:paddingStart="8dp"
                android:paddingEnd="8dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--login btn-->
        <Button
            android:id="@+id/registerBtn"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_margin="16dp"
            android:background="@drawable/login_btn_bg"
            android:text="@string/register"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            app:layout_constraintTop_toBottomOf="@id/passwordRegisterTl" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>