<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".profile.EditProfileFragment">

    <ProgressBar
        android:id="@+id/editProfileProgressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--toolbar-->
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/editProfileAppBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/editProfileToolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageButton
                    android:id="@+id/closeBtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/ic_close_black"
                    android:contentDescription="@string/close_button_to_go_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/edit_profile_fragment"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/doneBtn"
                    app:layout_constraintStart_toEndOf="@id/closeBtn"
                    app:layout_constraintTop_toTopOf="parent" />

                <ImageButton
                    android:id="@+id/doneBtn"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_marginEnd="16dp"
                    android:background="@drawable/ic_done_blue"
                    android:contentDescription="@string/close_button_to_go_back"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <!--scroll view and main content-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:isScrollContainer="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProfileAppBar">

        <!--main layout-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp">

            <!--profile image view-->
            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/editProfileUserImageView"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/profile_pic"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--changeProfilePhotoTv-->
            <TextView
                android:id="@+id/changeProfilePhotoTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/change_profile_photo"
                android:textColor="@color/blue_light"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@id/editProfileUserImageView"
                app:layout_constraintStart_toStartOf="@id/editProfileUserImageView"
                app:layout_constraintTop_toBottomOf="@id/editProfileUserImageView" />

            <!--name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nameTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/changeProfilePhotoTv">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/nameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/name" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--user name-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/userNameTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/nameTL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/userNameEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/user_nme" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--website-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/websiteTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/userNameTL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/websiteEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/website" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--Bio-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/bioTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/websiteTL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bioEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/bio" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--view switch to professional account-->
            <View
                android:id="@+id/viewTop"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/bioTL" />

            <TextView
                android:id="@+id/switchToProfessionalAccountTv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:text="@string/switch_to_professional_account"
                android:textColor="@color/blue_light"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/viewTop" />

            <View
                android:id="@+id/viewBottom"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/switchToProfessionalAccountTv" />

            <!--profile information-->
            <View
                android:id="@+id/viewTopProfileInfo"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="@color/gray"
                app:layout_constraintTop_toBottomOf="@+id/viewBottom" />
            <!--profile info static-->
            <TextView
                android:id="@+id/profileInformationStatic"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/profile_information"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@+id/viewTopProfileInfo" />

            <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/profileInformationStatic">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--phoneNo-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/phoneNoTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/emailTL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/phoneNoEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/phone_number" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--gender-->
            <!--email-->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/genderTL"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintTop_toBottomOf="@+id/phoneNoTL">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/genderEt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/gender" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>